2008-09-29 Marc Noirot <marc.noirot@gmail.com>
	* flv.h, flvdump.c: Added support for JPEG video frames.

2008-09-25 Marc Noirot <marc.noirot@gmail.com>
	* configure.ac: 1.0.7 Release.

	* flvmeta.c: Added invalid timestamp correction.

2008-09-23 Marc Noirot <marc.noirot@gmail.com>
	* flvdump.c: Fixed a bug causing the FLV parsing to lose track
	  of tags in the case of malformed metadata.

	* flvdump.c: Added invalid timestamp correction.

2008-09-23 Marc Noirot <marc.noirot@gmail.com>
	* flv.h, flv.c (flv_get_timestamp, flv_tag_set_timestamp): Added
	  the flv_get_timestamp macro and the flv_tag_set_timestamp function
	  to add support of 32-bit extended timestamps.

	* flvmeta.c, flvdump.c: Added support of 32-bit extended timestamps.

	* flv.h, flvdump.c: Added supports for all the audio and video types
	  found in the official specification.

	* Makefile.am: Added compilation of flv.c.

	* types.c (uint32_to_uint24_be): Big-endian platforms fix.

	* types.h: Various fixes.

2008-05-28 Marc Noirot <marc.noirot@gmail.com>
	* configure.ac: 1.0.6 Release.

	* amf.h, amf.c (amf_str): amf_str was transformed from a macro into
	  a function for better sanity checks.

	* amf.c (amf_string_read): Avoided allocating an empty buffer for
	  zero-length strings.

	* amf.c (amf_string_new): Avoided copying null strings into newly-created
	  AMF strings.

	* amf.c (amf_data_dump): Fixed a bug where zero-length strings would
	  cause fprintf to segfault flvdump in Linux.

2008-04-02 Marc Noirot <marc.noirot@gmail.com>
	* configure.ac: 1.0.5 Release.

2008-03-24 Marc Noirot <marc.noirot@gmail.com>
	* amf.h, amf.c: Added support for the AMF NULL value type.

	* flvmeta.c (compute_vp6_size, compute_vp6_alpha_size): Fixed
	  a video size computation bug for the VP60 profile, reported
	  by zouguangxian@gmail.com.

2008-02-17 Marc Noirot <marc.noirot@gmail.com>
	* amf.c, amf.h, flvmeta.c, flvdump.c: Cleaned up the AMF